--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Skrypina_Tinkoff_Fintech_2023</string>
     <string name="genresKeyword">Жанры:</string>
     <string name="countriesKeyword">Страны:</string>
+    <string name="PosterContentDescription">A movie poster.</string>
 </resources>
